--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ enable_smart_app_banner                   : true                                
 # Information About Yourself
 your_name                                 : Viacheslav Nechyporenko                               
 your_link                                 : https://familycharades.com                   
-your_city                                 : Around the world                                
+your_city                                 : Space                                
 email_address                             : atslavasdad@gmail.com
 facebook_username                         :                                           
 instagram_username                        : 
